shelf: Press the shortcut in auto-hide shelf should do nothing.

changes in this cl:
- Do not process the event in ShelfView::ButtonPressed for auto-hide
  shelf. Since for example we don't want to open the app window by tap
  the shortcut in auto-hide shelf.

- Keep auto-hide shelf visible if tap inside the shelf when app list is
  opened. This is used to make sure press the shortcut in the auto-hide
  shelf when app list is opened can still open the corresponding app.
  It works before since we can tap the shortcut in the auto-hide shelf
  to open the app, but we fixed it in this cl.

Bug: 914189
Change-Id: I5cdc5e0164b8958e3ffdf03c9718ffab0c6a5ab6
Reviewed-on: https://chromium-review.googlesource.com/c/1374147
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616896}
Former-commit-id: ed4ad75877ca2837555e7f5bc0776f23d2a635f7